[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Textbox.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0117647, 0.0117647, 0.0117647, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="DynamicFontData" id=4]
antialiased = false
font_path = "res://Fonts/JinxedWizards.ttf"

[sub_resource type="DynamicFont" id=3]
font_data = SubResource( 4 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://Fonts/JinxedWizards.ttf"

[sub_resource type="DynamicFont" id=6]
size = 10
font_data = SubResource( 5 )

[sub_resource type="StyleBoxTexture" id=7]

[node name="Textbox" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="TextboxContainer" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = -67.0
margin_right = -16.0
margin_bottom = -16.0

[node name="Panel" type="Panel" parent="TextboxContainer"]
margin_right = 288.0
margin_bottom = 51.0
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="TextboxContainer"]
margin_right = 288.0
margin_bottom = 51.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="Panel" type="Panel" parent="TextboxContainer/MarginContainer"]
visible = false
margin_left = 8.0
margin_top = 8.0
margin_right = 280.0
margin_bottom = 43.0

[node name="HBoxContainer" type="HBoxContainer" parent="TextboxContainer/MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 280.0
margin_bottom = 43.0

[node name="Label" type="Label" parent="TextboxContainer/MarginContainer/HBoxContainer"]
margin_right = 272.0
margin_bottom = 35.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 3 )
text = "text!"
autowrap = true
clip_text = true

[node name="AcceptButton" type="Button" parent="TextboxContainer/MarginContainer/HBoxContainer"]
visible = false
margin_left = 238.0
margin_right = 272.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
text = "Accept"

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="TextboxContainer/MarginContainer/HBoxContainer/AcceptButton" to="." method="_on_AcceptButton_pressed"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
